--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PabloTheBlink - Radio en directo</title>
+    <link rel="manifest" href="manifest.webmanifest" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <script type="module" src="src/setup.js"></script>
     <link rel="icon" type="image/jpg" sizes="32x32" href="assets/img/icon.jpeg" />
